[package]
name = "ecs-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
hyper = { version = "0.14", features = ["full"]}
serde = "1"
serde_json = "1"
serde_derive = "1"
ordered-float = "3.0.0"
dashmap = "5.3.4"
futures = "0.3.21"
bytes = "1"
thiserror = "1"
